Added navigation and mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </head>
     <body>
         <div class="nav">
-            
+            <img src="follow.png">
+            <a href="#"><p>Sign in / Sign up</a>
         </div>
+
         <div class="wrapper">
             <img src="TJ.jpg" id="tj">
             <h1>Introducing Apex Ping</h1>
